--- a/Proyecto avance/css/styles.css
+++ b/Proyecto avance/css/styles.css
@@ -37,7 +37,7 @@ h1 {
  * Styles for the deck of cards
  */
 
-#deck {
+.m4x4{
     width: 660px;
     min-height: 680px;
     background: linear-gradient(160deg, #cacaca 0%, #aa7ecd 100%);
@@ -54,6 +54,24 @@ h1 {
     align-items: center !important;
     margin: 0 0 3em;
 
+}
+
+.m4x5{
+  width: 660px;
+  min-height: 780px;
+  background: linear-gradient(160deg, #cacaca 0%, #aa7ecd 100%);
+  padding: 32px;
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 5px;
+  border-color: #2e3d49;
+  border-radius: 10px;
+  box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
+  display: flex !important;
+  flex-wrap: wrap !important;
+  justify-content: space-between !important;
+  align-items: center !important;
+  margin: 0 0 3em;
 }
 
 #deck .card {
