--- a/Proyecto/app/src/main/res/layout/activity_add.xml
+++ b/Proyecto/app/src/main/res/layout/activity_add.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     tools:context=".Add">
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_margin="8dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
@@ -30,16 +30,17 @@
             android:id="@+id/events"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"></Spinner>
+
         <TextView
             android:text="Fecha"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
         <DatePicker
-            android:layout_marginBottom="8dp"
             android:id="@+id/date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-        </DatePicker>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"></DatePicker>
 
         <TextView
             android:text="Status del evento"
@@ -56,11 +57,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <TimePicker
+        <EditText
+            android:layout_marginBottom="8dp"
+            android:gravity="center_horizontal"
             android:id="@+id/hour"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"></TimePicker>
+            android:ems="10"
+            android:inputType="time" />
+
 
         <TextView
             android:text="Contacto"
@@ -70,6 +75,14 @@
         <Spinner
             android:id="@+id/contacts"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"/>
+
+        <Button
+            android:id="@+id/send"
+            android:text="Enviar"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"/>
 
